# cross-platform-websocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  README.md  class_diagram.puml  component_diagram.puml  data_flow.puml  data_flow_sequence.puml  deployment_diagram.puml  sequence_diagram.puml  simple_architecture.puml
docs/note/: SSL_SETUP.md
example/: CMakeLists.txt  README.md  websocket_client.cpp  websocket_client_ssl.cpp  websocket_framework_c_api_test.cpp  websocket_framework_example.cpp
platform/android/: readme.md
platform/go/: readme.md
platform/ios/: readme.md
platform/java/: readme.md
platform/python/: readme.md
platform/web/: readme.md
script/: build.sh  build_ninja.sh
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fake.cpp  websocket_framework.pc.in
src/api/c/: websocket_c_api.cpp  websocket_c_api.h
src/api/cpp/: websocket_api.cpp  websocket_api.h
src/business/: websocket_manager.cpp  websocket_manager.h
src/core/datalink/: datalink.cpp  datalink.h
src/core/logger/: logger.cpp  logger.h
src/example/: Makefile  cmake_install.cmake
src/platform/: native_platform.cpp  native_platform.h  platform_interface.h
src/src/: Makefile  cmake_install.cmake  websocket_framework.pc
